--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -145,6 +145,7 @@ MaximumGracePeriod = 31
 RegistryCheckGasOverhead = 90
 RegistryPerformGasOverhead = 4294967295
 RegistrySyncInterval = '1h0m0s'
+RegistryMaxPerformDataSize = 2000
 RegistrySyncUpkeepQueueSize = 31
 TurnLookBack = 91
 TurnFlagEnabled = true
