add perform data size check (#7435)
* add task to calculate string length

* add task to calculate less than operation

* add max performdata check in pipeline

* fixes

* small fix

* format toml

* another attempt at formatting

* add integration test for max perform data size

* add env var for max perform data size

* small rename

* fix unit test

* add mocks and test data

* fix tests

* fix tests

* generate docs

Co-authored-by: FelixFan1992 <fankejin@gmail.com>

--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -144,6 +144,7 @@ BaseFeeBufferPercent = 89
 MaximumGracePeriod = 31
 RegistryCheckGasOverhead = 90
 RegistryPerformGasOverhead = 4294967295
+RegistryMaxPerformDataSize = 5000
 RegistrySyncInterval = '1h0m0s'
 RegistrySyncUpkeepQueueSize = 31
 TurnLookBack = 91
