Renaming, mocks, try to fix config

--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -3,6 +3,11 @@ InsecureFastScrypt = true
 RootDir = 'test/root/dir'
 ShutdownGracePeriod = '10s'
 
+[AuditLoggerConfig]
+forwardToUrl = "http://localhost:9898"
+headers = []
+environment = "develop"
+
 [Feature]
 FeedsManager = true
 LogPoller = true
