--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -8,6 +8,17 @@ RootDir = '~/.chainlink' # Default
 # ShutdownGracePeriod is the maximum time allowed to shut down gracefully. If exceeded, the node will terminate immediately to avoid being SIGKILLed.
 ShutdownGracePeriod = '5s' # Default
 
+[AuditLogger]
+# ForwardToUrl is where you want to forward logs to
+ForwardToUrl = 'http://localhost:9898' # Example
+# Environment is an identifier for the host/environment you're on
+Environment = 'develop' # Example
+# JsonWrapperKey if set wraps the map of data under another single key to make parsing easier
+JsonWrapperKey = '' # Default
+# Headers is the set of headers you wish to pass along with each request
+Headers = [] # Default
+
+
 [Feature]
 # FeedsManager enables the experimental feeds manager service.
 FeedsManager = false # Default
