--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -80,6 +80,9 @@ jobs:
       CHAINLINK_ENV_USER: ${{ github.actor }}
       TEST_TRIGGERED_BY: core-CI-eth
       TEST_LOG_LEVEL: debug
+      PYROSCOPE_ENVIRONMENT: eth_smoke_tests
+      PYROSCOPE_AUTH_TOKEN: ${{ secrets.PYROSCOPE_OAUTH_TOKEN }}
+      PYROSCOPE_SERVER_ADDRESS: ${{ secrets.PYROSCOPE_OAUTH_TOKEN }}
     steps:
       - name: Collect Metrics
         id: collect-gha-metrics
@@ -184,6 +187,9 @@ jobs:
       CHAINLINK_ENV_USER: ${{ github.actor }}
       TEST_TRIGGERED_BY: core-CI-solana
       TEST_LOG_LEVEL: debug
+      PYROSCOPE_ENVIRONMENT: eth_smoke_tests
+      PYROSCOPE_AUTH_TOKEN: ${{ secrets.PYROSCOPE_OAUTH_TOKEN }}
+      PYROSCOPE_SERVER_ADDRESS: ${{ secrets.PYROSCOPE_OAUTH_TOKEN }}
     steps:
       - name: Collect Metrics
         id: collect-gha-metrics
