--- a/contracts/package.json
+++ b/contracts/package.json
@@ -7,6 +7,9 @@
   "private": false,
   "scripts": {
     "test": "hardhat test",
+    "lint": "eslint --ext js,ts .",
+    "prettier:check": "prettier . --check --ignore-unknown",
+    "prettier:write": "prettier . --write --ignore-unknown",
     "size": "hardhat size-contracts",
     "clean": "hardhat clean",
     "compile:native": "./scripts/native_solc_compile_all",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "@ethereum-waffle/mock-contract": "^3.3.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/test-helpers": "^0.5.11",
     "@typechain/ethers-v5": "^7.0.1",
@@ -33,14 +37,20 @@
     "@types/debug": "^4.1.7",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "chai": "^4.3.4",
     "debug": "^4.3.2",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.3.1",
     "hardhat": "^2.10.1",
     "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.5.1",
     "moment": "^2.29.4",
+    "prettier": "^2.7.1",
     "prettier-plugin-solidity": "1.0.0-beta.18",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
