--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -46,7 +46,7 @@ UseBatchSend = true
 ForwardToUrl = 'http://localhost:9898'
 Environment = 'develop'
 JsonWrapperKey = ''
-Headers = []
+Headers = ''
 
 [Log]
 DatabaseQueries = true
