--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -112,8 +112,8 @@ ForwardToUrl = 'http://localhost:9898' # Example
 Environment = 'develop' # Example
 # JsonWrapperKey if set wraps the map of data under another single key to make parsing easier
 JsonWrapperKey = '' # Default
-# Headers is the set of headers you wish to pass along with each request
-Headers = [] # Default
+# Headers is the set of headers you wish to pass along with each request formatted as specified in the documentation
+Headers = '' # Default
 
 [Log]
 # DatabaseQueries tells the Chainlink node to log database queries made using the default logger. SQL statements will be logged at `debug` level. Not all statements can be logged. The best way to get a true log of all SQL statements is to enable SQL statement logging on Postgres.
