--- a/contracts/package.json
+++ b/contracts/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.3",
+    "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "@openzeppelin/contracts-v0.7": "npm:@openzeppelin/contracts@v3.4.2",
     "@eth-optimism/contracts": "^0.5.21"
   }
