Refactor with Jordan's help

--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -43,6 +43,7 @@ SendTimeout = '5s'
 UseBatchSend = true
 
 [AuditLogger]
+Enabled = false
 ForwardToUrl = 'http://localhost:9898'
 Environment = 'develop'
 JsonWrapperKey = ''
