Add env defaults

--- a/core/services/chainlink/testdata/dump/full-custom.env
+++ b/core/services/chainlink/testdata/dump/full-custom.env
@@ -33,6 +33,11 @@ DATABASE_LOCKING_MODE=advisory
 LEASE_LOCK_DURATION=5s
 LEASE_LOCK_REFRESH_INTERVAL=2s
 
+AUDIT_LOGGER_ENABLED=false
+AUDIT_LOGGER_FORWARD_TO_URL=http://localhost:9898
+AUDIT_LOGGER_JSON_WRAPPER_KEY=event
+AUDIT_LOGGER_HEADERS=
+
 DATABASE_BACKUP_DIR=db/backup
 DATABASE_BACKUP_FREQUENCY=10m
 DATABASE_BACKUP_MODE=lite
