--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -218,9 +218,10 @@ jobs:
       - name: List files
         if: always()
         run: |
+          pwd
           ls
           ls /
-          ls /home/runner/work/chainlink-solana
+          ls /home/runner/work/
       - name: cleanup
         if: always()
         uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/cleanup@02c9ae5ec7f88250088bab88f14b4b043162b46d # v2.0.18
