--- a/core/chains/evm/config/v2/defaults/Optimism_Goerli.toml
+++ b/core/chains/evm/config/v2/defaults/Optimism_Goerli.toml
@@ -1,23 +1,16 @@
 ChainID = '420'
 ChainType = 'optimism'
-FinalityDepth = 1
+FinalityDepth = 200
 LinkContractAddress = '0xdc2CC710e42857672E7907CF474a69B63B93089f'
-MinIncomingConfirmations = 1
-NoNewHeadsThreshold = '0'
-OCR.ContractConfirmations = 1
-TxResendAfterThreshold = '15s'
 
-[BalanceMonitor]
-Enabled = true
+NoNewHeadsThreshold = '60s'
+TxResendAfterThreshold = '30s'
 
 [GasEstimator]
-Mode = 'L2Suggested'
-PriceMin = '0'
-BumpThreshold = 0
+EIP1559DynamicFees = true
 
 [GasEstimator.BlockHistory]
-BlockHistorySize = 0
+BlockHistorySize = 24
 
 [HeadTracker]
-HistoryDepth = 10
-SamplingInterval = '1s'
+HistoryDepth = 300
