--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -6,12 +6,51 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
+  shard-packages:
+    name: Shard Go Tests
+    runs-on: ubuntu-latest
+    outputs:
+      shards: ${{ steps.shard.outputs.shards }} 
+    env:
+      SHARDS: 10 
+    steps:
+      - name: Collect Metrics
+        id: collect-gha-metrics
+        uses: smartcontractkit/push-gha-metrics-action@v1
+        with:
+          basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
+          hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
+          this-job-name: Shard Go Tests 
+        continue-on-error: true
+      - name: Checkout the repo
+        uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
+          cache: true
+      - name: Touching core/web/assets/index.html
+        run: mkdir -p core/web/assets && touch core/web/assets/index.html
+      - name: Download Go vendor packages
+        run: go mod download
+      - name: Install zx shell
+        run: npm i -g zx
+      - name: Shard list of go packages
+        id: shard
+        run: ./tools/ci/shard_packages
+
   core:
+    needs: [shard-packages]
     strategy:
       fail-fast: false
       matrix:
         cmd: ["go_core_tests", "go_core_race_tests"]
-    name: Core Tests (${{ matrix.cmd }})
+        shard: ${{ fromJson(needs.shard-packages.outputs.shards) }}  
+    name: Core Tests (${{ matrix.cmd }}) ${{ matrix.shard.id }}
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/chainlink_test?sslmode=disable
@@ -39,7 +78,7 @@ jobs:
         with:
           basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
           hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
-          this-job-name: Core Tests (${{ matrix.cmd }})
+          this-job-name: Core Tests (${{ matrix.cmd }}) ${{ matrix.shard.id }}
         continue-on-error: true
       - name: Checkout the repo
         uses: actions/checkout@v2
@@ -67,12 +106,12 @@ jobs:
         if: github.event.schedule != ''
         run: echo "TIMEOUT=5m" >> $GITHUB_ENV
       - name: Run tests
-        run: ./tools/bin/${{ matrix.cmd }}
+        run: ./tools/bin/${{ matrix.cmd }} "${{ matrix.shard.pkgs }}"
       - name: Store logs artifacts on failure
         if: failure()
         uses: actions/upload-artifact@v2.3.0
         with:
-          name: ${{ matrix.cmd }}_logs
+          name: ${{ matrix.cmd }}_${{ matrix.shard.idx }}_logs
           path: |
             ./output.txt
             ./race.*
