--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,10 +15,10 @@
     "compile:native": "./scripts/native_solc_compile_all",
     "compile": "hardhat compile",
     "coverage": "hardhat coverage",
-    "setup": "yarn compile",
-    "prepublishOnly": "yarn compile && ./scripts/prepublish_generate_abi_folder",
-    "publish-beta": "yarn publish --tag beta",
-    "publish-prod": "yarn tag add @chainlink/contracts@0.5.1 latest"
+    "build": "pnpm compile",
+    "prepublishOnly": "pnpm compile && ./scripts/prepublish_generate_abi_folder",
+    "publish-beta": "pnpm publish --tag beta",
+    "publish-prod": "pnpm tag add @chainlink/contracts@0.5.1 latest"
   },
   "files": [
     "src/",
@@ -26,6 +26,11 @@
   ],
   "devDependencies": {
     "@ethereum-waffle/mock-contract": "^3.3.0",
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/contracts": "^5.7.0",
+    "@ethersproject/providers": "^5.7.1",
+    "@ethersproject/random": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -52,16 +57,18 @@
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "1.0.0-beta.18",
+    "rlp": "^2.0.0",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.0.0",
+    "tslib": "^2.4.0",
     "typechain": "^5.0.0",
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@eth-optimism/contracts": "^0.5.21",
     "@openzeppelin/contracts": "^4.3.3",
-    "@openzeppelin/contracts-v0.7": "npm:@openzeppelin/contracts@v3.4.2",
-    "@eth-optimism/contracts": "^0.5.21"
+    "@openzeppelin/contracts-v0.7": "npm:@openzeppelin/contracts@v3.4.2"
   }
 }
