--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -24,19 +24,13 @@ jobs:
         continue-on-error: true
       - name: Checkout the repo
         uses: actions/checkout@v2
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16"
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version-file: "go.mod"
-          cache: true
+          cache: false
       - name: Touching core/web/assets/index.html
         run: mkdir -p core/web/assets && touch core/web/assets/index.html
-      - name: Download Go vendor packages
-        run: go mod download
       - name: Install zx shell
         run: npm i -g zx
       - name: Shard list of go packages
@@ -103,8 +97,10 @@ jobs:
         run: go mod download
       - name: Install solana cli
         run: ./tools/ci/install_solana
+      - name: Build binary
+        run: go build -o chainlink.test ./core
       - name: Setup DB
-        run: go run ./core local db preparetest
+        run: ./chainlink.test local db preparetest
       - name: Increase Race Timeout
         if: github.event.schedule != ''
         run: echo "TIMEOUT=5m" >> $GITHUB_ENV
