Revert "Remove solana CLI from core tests"
This reverts commit f934b1cb2d4a066d3d648ce0b3a7269110068526.

--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -97,6 +97,8 @@ jobs:
         run: mkdir -p core/web/assets && touch core/web/assets/index.html
       - name: Download Go vendor packages
         run: go mod download
+      - name: Install solana cli
+        run: ./tools/ci/install_solana
       - name: Build binary
         run: go build -o chainlink.test ./core
       - name: Setup DB
