--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -90,13 +90,33 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version-file: "go.mod"
-          cache: true
-      - name: Clean cache
-        run: go clean -cache
+          cache: false
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@09ab61130975078eb7cde103fe8d2ae1649a1853 #v6.1
+      - name: Set go cache keys
+        id: go-cache-dir
+        run: |
+          echo "::set-output name=gomodcache::$(go env GOMODCACHE)" 
+          echo "::set-output name=gocache::$(go env GOCACHE)" 
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ${{ steps.go-cache-dir.outputs.gomodcache }}
+            ${{ steps.go-cache-dir.outputs.gocache }}
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ steps.branch-name.outputs.current_branch }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-
+            ${{ runner.os }}-go-
       - name: Touching core/web/assets/index.html
         run: mkdir -p core/web/assets && touch core/web/assets/index.html
       - name: Download Go vendor packages
         run: go mod download
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.local/share/solana/install/active_release/bin
+          key: ${{ runner.os }}-${{ hashFiles('./tools/ci/install_solana') }}
       - name: Install solana cli
         run: ./tools/ci/install_solana
       - name: Build binary
