Use alpine postgres for testing

--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -57,7 +57,7 @@ jobs:
       LOG_LEVEL: debug
     services:
       postgres:
-        image: postgres:14
+        image: postgres:14-alpine
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
