--- a/core/config/v2/docs/chains-solana.toml
+++ b/core/config/v2/docs/chains-solana.toml
@@ -12,7 +12,7 @@ OCR2CachePollPeriod = '1s' # Default
 # OCR2CacheTTL is the stale OCR2 cache deadline.
 OCR2CacheTTL = '1m' # Default
 # TxTimeout is the timeout for sending txes to an RPC endpoint.
-TxTimeout = '1h' # Default
+TxTimeout = '1m' # Default
 # TxRetryTimeout is the duration for tx manager to attempt rebroadcasting to RPC, before giving up.
 TxRetryTimeout = '10s' # Default
 # TxConfirmTimeout is the duration to wait when confirming a tx signature, before discarding as unconfirmed.
