--- a/core/chains/evm/config/v2/defaults/Arbitrum_Goerli.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Goerli.toml
@@ -2,6 +2,7 @@ ChainID = '421613'
 ChainType = 'arbitrum'
 NoNewHeadsThreshold = '0'
 OCR.ContractConfirmations = 1
+LinkContractAddress = '0xdc2CC710e42857672E7907CF474a69B63B93089f'
 
 [GasEstimator]
 Mode = 'Arbitrum'
